hard-gists/6b2273d7e332f29193d0/run.log
=== Docker Run Log for 6b2273d7e332f29193d0 ===
Started at: Mi 29. Okt 16:48:09 CET 2025

[2025-10-29 16:48:09] START: Running container for 6b2273d7e332f29193d0
[2025-10-29 16:48:09] SUCCESS: Container 464ef0f8d8d18f652dc60413ca4fd178a6849f0c53b7905273e0c64eecbdcd48 started for 6b2273d7e332f29193d0
=== Container logs for 6b2273d7e332f29193d0 ===
  File "/snippet.py", line 39
    except Exception, err:
           ^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 6b2273d7e332f29193d0 ===
[2025-10-29 16:48:11] INFO: Container 464ef0f8d8d18f652dc60413ca4fd178a6849f0c53b7905273e0c64eecbdcd48 has stopped
